--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hs-tailwind",
+  "name": "stoica-tailwind",
   "version": "1.0.0",
   "description": "hs tailwind theme",
   "main": "index.js",
